--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "husky": "^0.14.3",
     "jest": "21.2.0",
-    "mapbox-gl": "0.48.0",
+    "mapbox-gl": "file:mapbox-gl",
     "prettier": "1.10.2",
     "prop-types": "15.5.10",
     "react": "16.0.0",
